# larvaworld

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage_legacy.xml  larvaworld.py  larvaworld_gui.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.dvc/: config
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  poetry-upgrade.yml  publish.yml
cli/: argparsing.py  cli_argparsers.py  conf_aux.py  parser.py
data/configurations/: BatchConfs.txt  DataConfs.txt  DataGroups.txt  EnvConfs.txt  ModelConfs.txt  ParConfs.txt  ParDatabase.csv  SimIdx.txt
docs/: CITATION.rst  conf.py  contributing.md  index.md  index.rst  index_base.html  index_base.rst  installation.md  publications.rst  requirements.txt  usage.md  video_examples.md
docs/_static/: custom.css
docs/agents_environments/: arenas_and_substrates.md  brain_module_architecture.md  larva_agent_architecture.md
docs/api/: api_cli.rst  api_dashboards.rst  api_dataset.rst  api_generators.rst  api_overview.rst  api_simulation.rst
docs/concepts/: architecture_overview.md  code_structure.md  dependencies.md  experiment_configuration_pipeline.md  experiment_types.md  module_interaction.md  simulation_modes.md  theory_overview.md  theory_overview_OLD.md  theory_overview_REVISED.md
docs/data_pipeline/: data_processing.md  lab_formats_import.md  reference_datasets.md
docs/figures_tables_from_paper/: INDEX.md
docs/mermaid_diagrams/: 01_code_distribution_pie.md  02_file_count_by_category.md  03_lines_of_code_by_module.md  04_dependencies_mindmap.md  05_a_experiment_types_conceptual.md  05_b_experiment_types_by_code_structure.md  06_experiment_configuration_pipeline.md  07_a_module_interaction_verified.md  07_b_module_interaction_simplified.md  08_architecture_overview.md  09_dish_exploration_experiment.md  10_olfactory_learning.md  11_simulation_types_comparison.md  12_genetic_algorithm_optimization.md  13_a_larvasim_architecture_verified.md  13_b_larvasim_architecture_simplified.md  14_brain_module_architecture.md
docs/source/: conf.py  index.rst
docs/tutorials/: CONFTYPES.ipynb  cli.ipynb  configuration.rst  custom_module.ipynb  data.rst  development.rst  environment_configuration.ipynb  genetic_algorithm_optimization.ipynb  import_datasets.ipynb  index.md  library_interface.ipynb  model_evaluation.ipynb  remote_model_interface.ipynb  replay.ipynb  sensorscapes.ipynb  simulation.rst  single_simulation.ipynb
docs/visualization/: keyboard_controls.md  plotting_api.md  visualization_snapshots.md  web_applications.md
docs/working_with_larvaworld/: batch_runs_advanced.md  ga_optimization_advanced.md  model_evaluation.md  replay.md  single_experiments.md
examples/: main.py
examples/brian2-interface/: larvaworld_launcher.py  model.py  sensors.py  server.py  server_runnable.py  utils.py
gui/aux/: buttons.py  elements.py  par_tree.py  windows.py
gui/gui_aux/: buttons.py  dtypes.py  elements.py  functions.py  par_tree.py  png_to_b64.py  tab.py  windows.py
gui/tabs/: __init__.py  analysis.py  analysis_tab.py  batch_run.py  batch_tab.py  body_draw.py  draw_body_tab.py  draw_env_tab.py  env.py  env_draw.py  env_tab.py  essay.py  essay_tab.py  gui.py  import_tab.py  importing.py  intro.py  intro_tab.py  larvaworld_gui.py  life_history.py  life_tab.py  model.py  model_tab.py  settings.py  settings_tab.py  sim_tab.py  simulation.py  tab.py  tutorial.py  tutorial_tab.py  video_tab.py  videos.py
larvaworld/aux/: xy.py
larvaworld/ipc/: ipc.py
larvaworld/plot/: aux.py  epochs.py  grid.py  scape.py  traj.py
larvaworld/process/: building.py  calibration.py  dataset.py  spatial.py
larvaworld/reg/: config.py  data_structure.py  facade.py  parDB.py  parFunc.py
larvaworld/screen/: side_panel.py
larvaworld/sim/: genetic_algorithm.py  run_template.py
larvaworld/util/: data_aux.py  eval_aux.py  sampling.py
lib/anal/: argparsers.py  combining.py  comparing.py  eval_aux.py  evaluation.py  fitting.py  plot_aux.py  plot_combos.py  plot_datasets.py  plotting.py  rendering.py  sampling.py
lib/aux/: __init__.py  ang.py  ang_aux.py  annotation.py  argparsers.py  collecting.py  colsNstr.py  combining.py  conf_aux.py  data_aux.py  dictsNlists.py  dir_aux.py  dtype_dicts.py  eval_aux.py  exp_fitter.py  fitting.py  functions.py  naming.py  np.py  par_aux.py  par_conf.py  parsing.py  png_to_b64.py  rendering.py  sample_aux.py  sampling.py  shapely_aux.py  sim_aux.py  stdout.py  stor_aux.py  vel_aux.py  xy.py  xy_aux.py
lib/calibration/: model_fit.py
lib/conf/: __init__.py  batch_conf.py  batch_conf_0.py  batch_modes.py  conf.py  data_conf.py  data_modes.py  dtype_dicts.py  dtypes.py  env_conf.py  env_modes.py  essay_conf.py  exp_conf.py  exp_modes.py  init_dtypes.py  larva_conf.py  larva_modes.py  par.py  par_conf.py  par_db.py  reset_conf.py  sim_modes.py
lib/decorators/: __init__.py  debug.py  property.py  timer.py
lib/envs/: _larvaworld.py  _larvaworld_replay.py  _larvaworld_sim.py  _maze.py  _space.py
lib/eval/: eval_aux.py  evaluation.py  model_fit.py
lib/ga/: exploration.py  exploration_ga.py  obstacle_avoidance.py  obstacle_avoidance_ga.py  phototaxis.py
lib/gui/: analysis_tab.py  aux.py  batch_tab.py  buttons.py  draw_env.py  env_tab.py  essay_tab.py  exp_tab.py  graphics.py  gui.py  gui_lib.py  import_tab.py  intro_tab.py  tab.py  (+9 more)
run/: batch_run.py  eval_run.py  exec_run.py  exp_run.py  ga_run.py  larvaworld.py  larvaworld_gui.py  main.py  process.py  replay_run.py
tests/: conftest.py  context.py  init_datasets.py  test_analysis.py  test_aux.py  test_box2d.py  test_cli.py  test_cli_argparser.py  test_conf.py  test_evaluation.py  test_fft.py  test_ga.py  test_import.py  test_import_aux.py  test_param_classes.py  test_plot_aux.py  test_plotting.py  test_replay.py  test_sim.py  test_space_dict.py
tutorial/: drosophila_larva_foraging.ipynb  theoretical_background.ipynb  tutorial.ipynb  walkthrough.ipynb
(+1799 files in other folders)
